// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the unexpected error alert component renders as expected if there is an error and not saving 1`] = `
<div
  aria-hidden={false}
  aria-live="polite"
  className="alert--unexpected-error alert--unexpected-error__active"
>
  <Alert
    heading="Unable to save changes!"
    headingLevel="3"
    role="alertdialog"
    variation="warn"
  >
    <p>
      Your changes aren't being saved. Try saving your changes again in a few minutes by clicking on the save button.
    </p>
    <p>
      If that doesn't clear this message, back up the changes you made on this page (for instance, if you just wrote a long narrative, save it into a text file or word doc) and refresh your browser. If you refresh your browser without saving backing up your changes, changes made after this message appeared will be lost.
    </p>
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        component="button"
        onClick={[MockFunction]}
        type="button"
        variation="primary"
      >
        Save
      </Button>
    </p>
  </Alert>
</div>
`;

exports[`the unexpected error alert component renders as expected if there is and error and is saving 1`] = `
<div
  aria-hidden={false}
  aria-live="polite"
  className="alert--unexpected-error alert--unexpected-error__active"
>
  <Alert
    heading="Unable to save changes!"
    headingLevel="3"
    role="alertdialog"
    variation="warn"
  >
    <p>
      Your changes aren't being saved. Try saving your changes again in a few minutes by clicking on the save button.
    </p>
    <p>
      If that doesn't clear this message, back up the changes you made on this page (for instance, if you just wrote a long narrative, save it into a text file or word doc) and refresh your browser. If you refresh your browser without saving backing up your changes, changes made after this message appeared will be lost.
    </p>
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        component="button"
        onClick={[MockFunction]}
        type="button"
        variation="primary"
      >
        <Spinner />
         Saving
      </Button>
    </p>
  </Alert>
</div>
`;

exports[`the unexpected error alert component renders as expected if there is no error and not saving 1`] = `
<div
  aria-hidden={true}
  aria-live="polite"
  className="alert--unexpected-error "
>
  <Alert
    heading="Unable to save changes!"
    headingLevel="3"
    role="alertdialog"
    variation="warn"
  >
    <p>
      Your changes aren't being saved. Try saving your changes again in a few minutes by clicking on the save button.
    </p>
    <p>
      If that doesn't clear this message, back up the changes you made on this page (for instance, if you just wrote a long narrative, save it into a text file or word doc) and refresh your browser. If you refresh your browser without saving backing up your changes, changes made after this message appeared will be lost.
    </p>
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        component="button"
        onClick={[MockFunction]}
        type="button"
        variation="primary"
      >
        Save
      </Button>
    </p>
  </Alert>
</div>
`;
